@@ -242,10 +242,9 @@ class TopSurnamesGramplet(Gramplet):
         ### All done!
         self.set_text("")
         for (count, surname) in surname_sort:
-            self.append_text("  %d. " % (line + 1))
-            self.link(surname, 'Surname', representative_handle[surname])
-            self.append_text(", %d%% (%d)\n" % 
-                             (int((float(count)/total) * 100), count))
+            text = "%s, %d%% (%d)\n" %  (surname, int((float(count)/total) * 100), count)
+            self.append_text(" %d. " % (line + 1))
+            self.link(text, 'Surname', representative_handle[surname])
             line += 1
             if line >= self.top_size:
                 break
